--- a/index.html
+++ b/index.html
@@ -92,49 +92,52 @@
 
       </div>
 
-      <!-- Mockup do Ebook (Capa Visual) -->
-      <div class="md:w-1/2 flex justify-center">
-        <div class="relative w-64 h-80 md:w-80 md:h-96 bg-white rounded-lg shadow-xl transform rotate-3 transition duration-300 hover:shadow-2xl">
+<!-- Mockup do Ebook (Capa Visual) -->
+<div class="w-full flex justify-center px-4 sm:px-6 lg:px-8">
+  <div class="relative w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg aspect-[3/4] bg-white rounded-lg shadow-xl transition duration-300 hover:shadow-2xl transform md:rotate-3">
 
-            <!-- Overlay colorido -->
-            <div class="absolute inset-0 bg-gradient-to-br from-purple-500 to-pink-500 opacity-15 rounded-lg"></div>
+    <!-- Overlay colorido -->
+    <div class="absolute inset-0 bg-gradient-to-br from-purple-500 to-pink-500 opacity-15 rounded-lg"></div>
 
-                <!-- Conteúdo principal -->
-                <div class="absolute inset-4 bg-white rounded-md shadow-inner flex flex-col p-4">
+    <!-- Conteúdo principal -->
+    <div class="absolute inset-2 sm:inset-4 bg-white rounded-md shadow-inner flex flex-col p-4">
 
-                    <!-- Barra superior estilo app -->
-                    <div class="h-8 flex items-center px-3 border-b border-gray-200 mb-3">
-                        <div class="w-3 h-3 rounded-full bg-red-500 mr-2"></div>
-                        <div class="w-3 h-3 rounded-full bg-yellow-500 mr-2"></div>
-                        <div class="w-3 h-3 rounded-full bg-green-500"></div>
-                    </div>
+      <!-- Barra superior estilo app -->
+      <div class="h-8 flex items-center px-3 border-b border-gray-200 mb-3">
+        <div class="w-3 h-3 rounded-full bg-red-500 mr-2"></div>
+        <div class="w-3 h-3 rounded-full bg-yellow-500 mr-2"></div>
+        <div class="w-3 h-3 rounded-full bg-green-500"></div>
+      </div>
 
-                    <!-- Título do ebook -->
-                    <h3 class="font-bold text-lg mb-2 text-center">Instagram do Zero ao Profissional</h3>
-                    <p class="text-sm text-gray-600 mb-4 text-center">
-                        Como construir, crescer e monetizar seu perfil do Instagram.
-                    </p>
+      <!-- Título do ebook -->
+      <h3 class="font-bold text-base sm:text-lg mb-2 text-center">Instagram do Zero ao Profissional</h3>
+      <p class="text-xs sm:text-sm text-gray-600 mb-4 text-center">
+        Como construir, crescer e monetizar seu perfil do Instagram.
+      </p>
 
-                    <!-- Simulação de gráfico de insights -->
-                    <div class="flex-1 flex flex-col items-center justify-center space-y-3">
-                        
-                        <!-- Gráfico simples -->
-                        <img src="img/instagram.jpg" alt="Instagram Insights" class="w-64 h-32 object-cover rounded-md mb-2">
+      <!-- Simulação de gráfico de insights -->
+      <div class="flex-1 flex flex-col items-center justify-center space-y-3">
 
-                        <!-- Legenda do gráfico -->
-                        <p class="text-xs text-gray-500 text-center">
-                        Exemplo de crescimento de engajamento semanal
-                        </p>
+        <!-- Gráfico simples -->
+        <img src="img/instagram.jpg" alt="Instagram Insights"
+          class="w-full max-w-[90%] h-auto object-cover rounded-md mb-2 shadow-md">
 
-                        <!-- Ícone de estatísticas -->
-                        <div class="mt-4 flex items-center justify-center w-12 h-12 rounded-full bg-gradient-to-r from-blue-500 to-teal-400 shadow-md">
-                        <i class="fas fa-chart-line text-white text-2xl"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <!-- Legenda do gráfico -->
+        <p class="text-xs text-gray-500 text-center">
+          Exemplo de crescimento de engajamento semanal
+        </p>
+
+        <!-- Ícone de estatísticas -->
+        <div class="mt-2 flex items-center justify-center w-10 h-10 sm:w-12 sm:h-12 rounded-full bg-gradient-to-r from-blue-500 to-teal-400 shadow-md">
+          <i class="fas fa-chart-line text-white text-xl sm:text-2xl"></i>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+
+
 
     </div>
   </div>
