--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
           <p class="text-sm text-white mt-2 sm:mt-3 text-center sm:text-left">
-            Acesso imediato • Garantia de 7 dias • Conteúdo Atualizado 2024
+            Acesso imediato • Garantia de 7 dias • Conteúdo Atualizado 2025
           </p>
 
         </div>
@@ -676,7 +676,7 @@
 
         <!-- Informações adicionais -->
         <p class="mt-4 text-sm text-yellow-100 italic">
-          Acesso imediato • Garantia de 7 dias • Conteúdo atualizado para 2024
+          Acesso imediato • Garantia de 7 dias • Conteúdo atualizado para 2025
         </p>
 
       </div>
@@ -737,16 +737,16 @@
           </div>
         </div>
 
-        <div>
+        <!-- <div>
           <h4 class="font-bold mb-4">Contato</h4>
           <p class="text-gray-400">@webert.lobato
 
           </p>
-        </div>
+        </div> -->
       </div>
 
       <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-500">
-        <p>© 2023 Instagram do Zero ao Profissional. Todos os direitos reservados.</p>
+        <p>© 2025 Instagram do Zero ao Profissional. Todos os direitos reservados.</p>
       </div>
     </div>
   </footer>
@@ -776,7 +776,7 @@
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=536541168783912&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
-   
+
 </body>
 
 </html>
