--- a/index.html
+++ b/index.html
@@ -702,8 +702,38 @@
 
   <!-- Footer -->
   <footer class="bg-gray-900 text-white py-12 px-4 md:px-8">
+    <div class="container mx-auto w-full">
+      <!-- Centraliza o conteúdo da grid no meio -->
+      <div class="flex justify-center">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-3xl w-full text-center">
+          <div>
+            <h3 class="font-bold text-xl mb-4">Instagram do Zero ao Profissional</h3>
+            <p class="text-gray-400">O guia completo para dominar o Instagram e transformar seu perfil em uma fonte de
+              renda.</p>
+          </div>
+
+          <div>
+            <h4 class="font-bold mb-4">Links Rápidos</h4>
+            <ul class="space-y-2">
+              <li><a href="#intro" class="text-gray-400 hover:text-white transition">Introdução</a></li>
+              <li><a href="#preview" class="text-gray-400 hover:text-white transition">Conteúdo</a></li>
+              <li><a href="#download" class="text-gray-400 hover:text-white transition">Baixar eBook</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-500">
+        <p>© 2025 Instagram do Zero ao Profissional. Todos os direitos reservados.</p>
+      </div>
+    </div>
+  </footer>
+
+
+  <!-- Footer -->
+  <!-- <footer class="bg-gray-900 text-white py-12 px-4 md:px-8">
     <div class="container mx-auto max-w-6xl">
-      <div class="grid md:grid-cols-4 gap-8">
+      <div class="grid md:grid-cols-4 gap-8 ">
         <div>
           <h3 class="font-bold text-xl mb-4">Instagram do Zero ao Profissional</h3>
           <p class="text-gray-400">O guia completo para dominar o Instagram e transformar seu perfil em uma fonte de
@@ -717,9 +747,9 @@
             <li><a href="#preview" class="text-gray-400 hover:text-white transition">Conteúdo</a></li>
             <li><a href="#download" class="text-gray-400 hover:text-white transition">Baixar eBook</a></li>
           </ul>
-        </div>
+        </div> -->
 
-        <div>
+  <!-- <div>
           <h4 class="font-bold mb-4">Redes Sociais</h4>
           <div class="flex space-x-4">
             <a href="#"
@@ -735,21 +765,21 @@
               <i class="fab fa-twitter"></i>
             </a>
           </div>
-        </div>
+        </div> -->
 
-        <!-- <div>
+  <!-- <div>
           <h4 class="font-bold mb-4">Contato</h4>
           <p class="text-gray-400">@webert.lobato
 
           </p>
         </div> -->
-      </div>
+  <!-- </div>
 
       <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-500">
         <p>© 2025 Instagram do Zero ao Profissional. Todos os direitos reservados.</p>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <!-- Floating Button -->
   <a href="#download"
