--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
     </div>
   </section>
 
-  <!-- Monetization -->
+  <!-- Monetization
   <section class="py-16 px-4 md:px-8 bg-gradient-to-r from-purple-50 to-pink-50">
     <div class="container mx-auto max-w-4xl">
       <div class="text-center mb-12">
@@ -644,7 +644,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Download CTA -->
   <section id="download" class="py-16 px-4 md:px-8 bg-white">
@@ -682,29 +682,30 @@
       </div>
 
       <!-- Ícones de benefícios -->
-      <div class="mt-8 grid grid-cols-1 sm:grid-cols-3 gap-4 text-center">
-        <div class="flex flex-col items-center text-gray-700">
+      <div class="mt-8 flex flex-wrap justify-center gap-12 text-center">
+        <div class="flex flex-col items-center text-gray-700 max-w-xs">
           <i class="fas fa-book-open text-3xl text-purple-500 mb-2"></i>
           <p>Guia completo em PDF</p>
         </div>
-        <div class="flex flex-col items-center text-gray-700">
+        <div class="flex flex-col items-center text-gray-700 max-w-xs">
           <i class="fas fa-tools text-3xl text-pink-500 mb-2"></i>
           <p>Ferramentas e recursos recomendados</p>
         </div>
-        <div class="flex flex-col items-center text-gray-700">
-          <i class="fas fa-download text-3xl text-indigo-500 mb-2"></i>
-          <p>Bônus: planilha + checklist</p>
-        </div>
+        <!-- <div class="flex flex-col items-center text-gray-700 max-w-xs">
+    <i class="fas fa-download text-3xl text-indigo-500 mb-2"></i>
+    <p>Bônus: planilha + checklist</p>
+  </div> -->
       </div>
+
 
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-white py-12 px-4 md:px-8">
-    <div class="container mx-auto w-full">
-      <!-- Centraliza o conteúdo da grid no meio -->
-      <div class="flex justify-center">
+  <!-- <footer class="bg-gray-900 text-white py-12 px-4 md:px-8">
+    <div class="container mx-auto w-full"> -->
+  <!-- Centraliza o conteúdo da grid no meio -->
+  <!-- <div class="flex justify-center">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-3xl w-full text-center">
           <div>
             <h3 class="font-bold text-xl mb-4">Instagram do Zero ao Profissional</h3>
@@ -727,72 +728,61 @@
         <p>© 2025 Instagram do Zero ao Profissional. Todos os direitos reservados.</p>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
 
   <!-- Footer -->
-  <!-- <footer class="bg-gray-900 text-white py-12 px-4 md:px-8">
+  <footer class="bg-gray-900 text-white py-12 px-4">
     <div class="container mx-auto max-w-6xl">
-      <div class="grid md:grid-cols-4 gap-8 ">
+      <div class="grid gap-8 md:grid-cols-3 justify-center text-center">
+        <!-- Bloco 1 -->
         <div>
           <h3 class="font-bold text-xl mb-4">Instagram do Zero ao Profissional</h3>
           <p class="text-gray-400">O guia completo para dominar o Instagram e transformar seu perfil em uma fonte de
             renda.</p>
         </div>
 
+        <!-- Bloco 2 -->
         <div>
           <h4 class="font-bold mb-4">Links Rápidos</h4>
           <ul class="space-y-2">
             <li><a href="#intro" class="text-gray-400 hover:text-white transition">Introdução</a></li>
             <li><a href="#preview" class="text-gray-400 hover:text-white transition">Conteúdo</a></li>
-            <li><a href="#download" class="text-gray-400 hover:text-white transition">Baixar eBook</a></li>
+            <!-- <li><a href="#download" class="text-gray-400 hover:text-white transition">Baixar eBook</a></li> -->
           </ul>
-        </div> -->
+        </div>
 
-  <!-- <div>
+        <!-- Bloco 3 -->
+        <div>
           <h4 class="font-bold mb-4">Redes Sociais</h4>
-          <div class="flex space-x-4">
-            <a href="#"
+          <div class="flex justify-center space-x-4">
+            <a href="https://www.instagram.com/webert.lobato/"
               class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-purple-600 transition">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#"
-              class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-blue-600 transition">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#"
-              class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-blue-400 transition">
-              <i class="fab fa-twitter"></i>
-            </a>
           </div>
-        </div> -->
+        </div>
+      </div>
 
-  <!-- <div>
-          <h4 class="font-bold mb-4">Contato</h4>
-          <p class="text-gray-400">@webert.lobato
-
-          </p>
-        </div> -->
-  <!-- </div>
-
+      <!-- Rodapé inferior -->
       <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-500">
         <p>© 2025 Instagram do Zero ao Profissional. Todos os direitos reservados.</p>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <!-- Floating Button -->
-  <a href="#download"
+  <!-- <a href="#download"
     class="fixed bottom-6 right-6 bg-gradient-to-r from-purple-500 to-pink-500 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg hover:shadow-xl transition duration-300 transform hover:scale-110">
     <i class="fas fa-download text-xl"></i>
-  </a>
+  </a> -->
 
   <!-- Meta Pixel Code -->
   <script>
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
