--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="flex-1 flex flex-col items-center justify-center space-y-3">
 
                 <!-- Gráfico simples -->
-                <img src="img/instagram.jpg" alt="Instagram Insights"
+                <img src="assets/img/insigth_instagram.jpg" alt="Instagram Insights"
                   class="w-full max-w-[90%] h-auto object-cover rounded-md mb-2 shadow-md">
 
                 <!-- Legenda do gráfico -->
